tests/paczka2/big_fuzzy/34409991.err
Error in line 8: sh82wXltc S255 1,5
Error in line 11: sh82wXltc S621 95,3
Error in line 13: cnAy S621 81,7
Error in line 15: z8Dd S255 41,2
Error in line 21: sh82wXltc S542 0,5
Error in line 22: wr1 S621 1,1
Error in line 27: S255 S124 0,0
Error in line 34: cnAy S621 65,8
Error in line 46: S255 S124 23,0
Error in line 47: S255 S542 78,2
Error in line 58: sh82wXltc S621 52,6
Error in line 69: z8Dd S124 5,4
Error in line 77: c4 S542 66,5
Error in line 70: sh82wXltc S255 56,4
Error in line 49: c47 S255 92,0
Error in line 86: z8Dd S124 26,1
Error in line 96: wr1 S621 18,5
Error in line 88: c47 S255 3,1
Error in line 103: z8Dd S542 26,5
Error in line 107: S255 S255 22,6
Error in line 129: wr1 S542 -2,7
Error in line 126: wr1 S542 31,4
Error in line 147: wr1 S542 9,9
Error in line 146: cnAy S542 36,2
Error in line 151: wr1 S542 7,5
Error in line 155: wr1 S621 81,2
Error in line 160: IUVVmxF65x S124 77,5
Error in line 161: wr1 S542 1,6
Error in line 168: wr1 S621 8,9
Error in line 178: cnAy S542 26,2
Error in line 188: S255 S255 23,8
Error in line 173: z8Dd S124 456,7
Error in line 189: cnAy S255 73,7
Error in line 206: S255 S124 272,0
Error in line 199: wr1 S621 53,8
Error in line 217: wr1 S255 0,8
Error in line 230: wr1 S542 99,5
Error in line 237: sh82wXltc S255 43,5
